[gd_scene load_steps=4 format=3 uid="uid://b7lwsij0mvbc3"]

[ext_resource type="Script" uid="uid://g67xcj248hea" path="res://entities/quick/quick_time.gd" id="1_44p71"]
[ext_resource type="Script" uid="uid://b562h7tp1x5g2" path="res://entities/quick/node_2d_dead.gd" id="2_3i6on"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ehso6"]
radius = 192.003

[node name="QuickTime" type="Area2D"]
collision_layer = 4
collision_mask = 2
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 0.0
angular_damp = 100.0
script = ExtResource("1_44p71")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0.0415139, 0.547504, 0.561249, 1)
shape = SubResource("CircleShape2D_ehso6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SequencePanel" type="Panel" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.85098)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.0
offset_top = 89.0
offset_right = 316.0
offset_bottom = 251.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SequenceLabel" type="Label" parent="CanvasLayer/SequencePanel"]
modulate = Color(0.933333, 0, 0.0145782, 1)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -36.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.141176, 0.0235294, 0.0235294, 1)
theme_override_font_sizes/font_size = 50
text = "test"
horizontal_alignment = 1

[node name="SequenceTimer" type="Timer" parent="."]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.592157)
script = ExtResource("2_3i6on")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="SequenceTimer" to="." method="_on_sequence_timer_timeout"]
